--- a/SyncUp/src/main/resources/css/styles.css
+++ b/SyncUp/src/main/resources/css/styles.css
@@ -341,7 +341,7 @@
 }
 
 .text-field {
-    -fx-background-color: #ffffff;
+    -fx-background-color: rgba(255, 255, 255, 0);
     -fx-text-fill: #000000;
     -fx-prompt-text-fill: #808080;
     -fx-background-radius: 5;
@@ -349,7 +349,7 @@
 }
 
 .text-field:focused {
-    -fx-background-color: #ffffff;
+    -fx-background-color: rgba(255, 255, 255, 0);
     -fx-border-color: #1DB954;
     -fx-border-width: 2;
 }
